--- a/src/components/controls/Controls.css
+++ b/src/components/controls/Controls.css
@@ -1,12 +1,13 @@
 .Controls {
   text-align: center;
+  margin-top: 50px;
   button {
-    padding: 0.4rem;
+    padding: 10px 10px;
     margin: 0 0.4rem;
-
     border:none;
-
-    background-color: #0198E1;
-    color: #FFFFFF;
+    background-color: rgb(245, 171, 75);
+    color: white;
+    font-size: 16px;
+    border-radius: 5px
   }
 }
